--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -77,7 +77,7 @@ Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the normalized cros
   \end{tabular}
 \end{table}
 
-The tests conducted here demonstrate the effectiveness of various cleaning approaches for the DESI LRG targets without revealing the measured power spectrum or $\fnl$ constraints. Results summarized in Table \ref{tab:chi2test} show that cleaning with non-linear three maps consistently produces $\chi^{2}$ values similar to clean mocks with reasonable $p$-values ($=0.39$ for mean density and $=0.59$ for cross power spectrum). On the other hand, the linear three maps approach fails to sufficiently mitigate systematics, as evidenced by low $p$-values ($< 0.001$ for mean density and $=0.04$ for cross power spectrum). Considering $p=0.05$ as a threshold for clean maps, the non-linear three maps approach is optimal, as adding more imaging systematic maps may exacerbate over-correction issues. \mr{When we compare the mean density $\chi^{2}$ from the DESI LRG targets to the mocks that have had the same imaging mitigation applied, we find that both nonlinear three and four maps have not entered the regime of over-correction. Whereas, nonlinear nine maps has reached the level of over-correction. This is illustrated in Figure \ref{fig:chi2scatter}.}
+The tests conducted here demonstrate the effectiveness of various cleaning approaches for the DESI LRG targets without revealing the measured power spectrum or $\fnl$ constraints. Results summarized in Table \ref{tab:chi2test} show that cleaning with non-linear three maps consistently produces $\chi^{2}$ values similar to clean mocks with reasonable $p$-values ($=0.39$ for mean density and $=0.59$ for cross power spectrum). On the other hand, the linear three maps approach fails to sufficiently mitigate systematics, as evidenced by low $p$-values ($< 0.001$ for mean density and $=0.04$ for cross power spectrum). Considering $p=0.05$ as a threshold for clean maps, the non-linear three maps approach is optimal, as adding more imaging systematic maps may exacerbate over-correction issues. \mr{When we compare the mean density $\chi^{2}$ from the DESI LRG targets to the $\fnl=0$ mocks that have had the same imaging mitigation applied, we find that both nonlinear three and four maps have not entered the regime of over-correction. Whereas, nonlinear nine maps has reached the level of over-correction. This is illustrated in Figure \ref{fig:chi2scatter}.}
 
 \begin{figure}
 \includegraphics[width=0.5\textwidth]{chi2_scatter.pdf}
@@ -85,9 +85,9 @@ The tests conducted here demonstrate the effectiveness of various cleaning appro
 \end{figure}
 
 
-\mr{Figure \ref{fig:chi2scatter} illustrates the remaining systematic error $\chi^{2}$ from the mean density contrast for mocks with $\fnl=0$ before (shown on horizontal scale) and after mitigation (shown on vertical scale) using the nonlinear three, four, and nine maps cleaning methods. The values for the $\fnl=76.9$ mocks are shown for nonlinear three maps only. The values observed in the DESI LRG targets after the same treatments are shown with solid lines. Note that the covariance matrices for the mean density and cross power spectrum are based on the $\fnl=0$ mocks. As a result, we find that the $\chi^{2}$ values for the $\fnl=76.9$ mocks are significantly larger than that of the $\fnl=0$ realizations. Therefore, these $\chi^{2}$ tests will have a preference for correction until excess power is removed, or equivalently, $\fnl=0$ is recovered even if the underlying $\fnl$ of the Universe is non-zero. We also find that the differences are resilient against log transformation, and we cannot make the methods less sensitive to the $\fnl$ used in the mocks.} 
+\mr{Figure \ref{fig:chi2scatter} illustrates the remaining systematic error $\chi^{2}$ from the mean density contrast for mocks with $\fnl=0$ before (shown on horizontal scale) and after mitigation (shown on vertical scale) using the nonlinear three, four, and nine maps cleaning methods. The values for the $\fnl=76.9$ mocks are shown for nonlinear three maps only. The values observed in the DESI LRG targets after the same treatments are shown with solid lines. Note that the covariance matrices for the mean density and cross power spectrum are based on the $\fnl=0$ mocks. As a result, we find that the $\chi^{2}$ values for the $\fnl=76.9$ mocks are significantly larger than that of the $\fnl=0$ realizations. Therefore, these $\chi^{2}$ tests will have a preference for correction until excess power is removed, or equivalently, $\fnl=0$ is recovered even if the underlying $\fnl$ of the Universe is non-zero. We also find that the differences are resilient against log transformation, and we cannot make the $\chi^{2}$ tests insensitive to the $\fnl$ value that is used in the mocks.} 
 
-\mr{As shown in Figure \ref{fig:contmcmc}, we are able to recover the true $\fnl$ using the coefficients derived in Table \ref{ssec:calibration}. The associated drawback is that statistical precision will be diminished due to the large-scale clustering information being removed by mitigating with more maps than necessary. Our work motivates better diagnostics for the characterization of systematics, such as one robustly differentiates large-scale excess power due to imaging systematics from that of non-zero local PNG.}
+\mr{As shown in Figure \ref{fig:contmcmc}, we are able to recover the true $\fnl$ using the coefficients derived in Table \ref{ssec:calibration}. The associated drawback is that statistical precision will be diminished due to the large-scale clustering information being removed by mitigating with more maps than necessary. Our work motivates better diagnostics for the characterization of systematic error, such that it robustly differentiates large-scale excess power due to imaging systematics from that of non-zero local PNG.}
 
 
 
@@ -102,13 +102,13 @@ M_{\ell \ell^{\prime}} = \frac{2\ell^{\prime}+1}{4\pi} \sum_{\ell^{\prime\prime}
 0 & 0 & 0
 \end{pmatrix},
 \end{equation}
-\mr{where the last term in the right hand side represents the Wigner 3-j symbol (or Clebsch-Gordan coefficient), and is calculated using \textsc{SymPy} \citep{sympy2017}. We benchmark our code against the publicly available software, \textsc{NaMaster}\footnote{\href{https://github.com/LSSTDESC/NaMaster}{https://github.com/LSSTDESC/NaMaster}} \citep{2019MNRAS.484.4127A}. Figure \ref{fig:window_conv} illustrates the different approaches to account for the mode-mode coupling caused by the survey window for two arbitrary values of $\fnl$. The survey mask applied is for the DESI footprint.The red shade represents the 68\% dispersion of the $\fnl=76.9$ mocks.}
+\mr{where the last term in the right hand side represents the Wigner 3-j symbol (or Clebsch-Gordan coefficient), and is calculated using \textsc{SymPy} \citep{sympy2017}. We benchmark our code against the publicly available software, \textsc{NaMaster}\footnote{\href{https://github.com/LSSTDESC/NaMaster}{https://github.com/LSSTDESC/NaMaster}} \citep{2019MNRAS.484.4127A}. Figure \ref{fig:window_conv} illustrates the different approaches to account for the mode-mode coupling caused by the DESI survey window for two arbitrary values of $\fnl$. The red shade represents the 68\% dispersion of the $\fnl=76.9$ mocks.}
 
 
 \begin{figure}
     \centering
     \includegraphics[width=0.5\textwidth]{figures/cl_conv.pdf}
-    \caption{\mr{The model power spectrum before and after the survey geometry convolution for $\fnl=0$ and $76.9$ using the DESI survey mask. The bottom panel shows the residual error with respect to the \textsc{NaMaster} code. The shade represents the dispersion of the $\fnl=76.9$ mock.}}
+    \caption{\mr{The model power spectrum before and after the survey geometry convolution for $\fnl=0$ and $76.9$ using the DESI survey mask. The bottom panel shows the residual error with respect to the \textsc{NaMaster} code. The shade represents the dispersion of the $\fnl=76.9$ mocks.}}
     \label{fig:window_conv}
 \end{figure}
 
