--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -40,7 +40,7 @@ where $b$ is the linear bias (dashed curve in Figure \ref{fig:nz}), $D$ represen
 \begin{equation}
 W_{\mu}(z) = (5s-2)\frac{3H^{2}_{0}\Omega_{m}(1+z)}{2c^{2}k^{2}} \int_{z}^{\infty} dz^{\prime}\frac{dN}{dz} \frac{r(z^{\prime}) - r(z)}{r(z^{\prime})r(z)},
 \end{equation}
-\mr{where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $c$ is the speed of light, and $s$ is the slope of the number count function \citep{2008PhRvD..77b3512L} which quantifies the response of the number density of galaxies to achromatic changes in the brightness. The parameter $s$ is estimated by shifting all magnitudes by an infinitesimal amount and re-running the color-mag selection, with the caveat that for a fiber flux-selected sample, like the DESI LRG targets, the impact of magnification on fiber flux depends on the shape parameters for each morphology type \citep{zhou2023desi}. The parameter $s$ for our sample is found to vary slightly in the different imaging regions: $s=0.951\pm 0.011$ for BASS+MzLS, $s=0.943 \pm 0.007$ for DECaLS North+DECaLS South, and $s=0.945\pm 0.006$ for DESI\footnote{Private communication with Dr. Rongpu Zhou.}. We fix $s$ to the central values in our analysis.} The PNG-induced scale-dependent shift is given by \citep{slosar2008constraints}
+\mr{where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $c$ is the speed of light, and $s$ represents the slope of the number count function, a metric quantifying the response of the number density of galaxies to achromatic changes in brightness \citep{2008PhRvD..77b3512L}. The estimation of $s$ involves shifting all magnitudes by an infinitesimal amount and re-running the color-magnitude selection. It is worth noting that, for a fiber flux-selected sample like the DESI LRG targets, the impact of magnification on fiber flux depends on the shape parameters for each morphology type \citep{zhou2023desi}. In our analysis, we find a slight variation in the parameter $s$ across different imaging regions. Specifically, we observe $s=0.951\pm 0.011$ for BASS+MzLS, $s=0.943 \pm 0.007$ for DECaLS North+DECaLS South, and $s=0.945\pm 0.006$ for DESI\footnote{Private communication with Dr. Rongpu Zhou.}. For consistency, we fix $s$ to the central values in our analysis.} The PNG-induced scale-dependent shift is given by \citep{slosar2008constraints}
 \begin{equation}
 \Delta b = b_{\phi}(z) \fnl \frac{3 \Omega_{m} H^{2}_{0}}{2 k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
 \label{eq:scaledepbias}
@@ -62,7 +62,7 @@ We convert this convolution in the spherical harmonic space into a multiplicatio
 \begin{align}
     \tilde{C}^{\rm model}_{\ell} &= 2\pi \int \hat{\omega}^{\rm model}\hat{\omega}^{\rm window}~P_{\ell}(\cos\theta) d\cos\theta.
 \end{align}
-\mr{Figure \ref{fig:mask2pf} illustrates ${\hat \omega}^{\rm window}$ for the different masks representing the DESI footprint and its imaging sub-regions. We benchmark our method against the approach that directly uses the mode-mode coupling matrix in Appendix \ref{ssec:windowconv}.} 
+\mr{Figure \ref{fig:mask2pf} illustrates ${\hat \omega}^{\rm window}$ for various masks representing the DESI footprint and its imaging sub-regions. We validate our method by comparing it to an alternative approach that directly employs the mode-mode coupling matrix, as detailed in Appendix \ref{ssec:windowconv}.} 
 
 The integral constraint is another systematic effect which is induced since the mean galaxy density is estimated from the observed galaxy density, and therefore is biased by the limited sky coverage \citep{peacock1991large}. To account for the integral constraint, the survey mask power spectrum is used to introduce a scale-dependent correction factor that needs to be subtracted from the power spectrum as,
 \begin{equation}
@@ -73,7 +73,7 @@ where $\tilde{C}^{\rm window}$ is the survey mask power spectrum, i.e., the sphe
 \begin{figure}
     \centering
     \includegraphics[width=0.45\textwidth]{figures/mask_2pf.pdf}
-    \caption{\mr{The survey mask correlation functions for the imaging regions forming the DESI footprint as a function of angular separation. The inset shows the correlations specifically for angles between $100$ and $180$ degrees.}}
+    \caption{\mr{The survey mask correlation functions across the imaging regions comprising the DESI footprint, plotted against angular separation. The inset focuses on correlations within the angular range of $100$ to $180$ degrees.}}
     \label{fig:mask2pf}
 \end{figure}
 
@@ -100,9 +100,9 @@ where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\r
 
 \subsection{Calibration of over-correction}\label{ssec:calibration}
 
-The template-based mitigation of imaging systematics removes some of the true clustering signal, and \mout{the amount of the removed signal increases as more maps are used for the regression.} \mr{mitigating with more maps should remove more modes and thus both bias the $\fnl$ estimation and the uncertainty.} We calibrate the over-correction effect using the mocks presented in \S \ref{sec:data}. \mr{One of the main advantages of having two sets of mocks with low and high power at low $\ell$ is that it gives a model for mapping the whole posterior and thus learning how the $\fnl$ constraints degrade as the imaging systematic correction gets greater.}  We apply the neural network model to both the $\fnl=0$ and $76.9$ simulations, with and without imaging systematics, using various sets of imaging systematic maps. Specifically, we consider \textit{non-linear three maps}, \textit{non-linear four maps}, and \textit{non-linear nine maps}. Then, we measure the power spectra from the mocks. We fit both the mean power spectrum and each individual power spectrum from the mocks. \mr{Appendix \ref{ssec:contmocks} presents the impact of the non-linear methods on the mock power spectra, and here we summarize the relevant details for the calibration of over-correction.}
+The template-based mitigation of imaging systematics removes some of the true clustering signal, and \mout{the amount of the removed signal increases as more maps are used for the regression.} \mr{mitigating with more maps should remove more modes and thus bias both the $\fnl$ estimation and its associated uncertainty.} We calibrate the over-correction effect using the mocks presented in \S \ref{sec:data}. \mr{Having two sets of mocks with low and high power at low $\ell$ offers a key advantage: it provides a model for mapping the entire posterior distribution. This enables us to understand how the constraints on $\fnl$ degrade as the magnitude of the imaging systematic correction increases.}  We apply the neural network model to both the $\fnl=0$ and $76.9$ simulations, with and without imaging systematics, using various sets of imaging systematic maps. Specifically, we consider \textit{non-linear three maps}, \textit{non-linear four maps}, and \textit{non-linear nine maps}. Then, we measure the power spectra from the mocks. We fit both the mean power spectrum and each individual power spectrum from the mocks. \mr{Appendix \ref{ssec:contmocks} outlines the impact of the non-linear methods on the mock power spectra, and here we summarize relevant details for the calibration of over-correction.}
 
-Figure \ref{fig:fnlbias} displays a comparison between the estimates of $\fnl$ before and after mitigation for the clean mocks. The best-fitting estimates \mr{from the mean of the mocks} are represented by the solid curves, and the individual spectra results are displayed as the scatter points. The results from fitting the mean power spectrum of the contaminated mocks are also shown via the dashed curves. We find nearly identical results for the biases caused by mitigation, whether or not the mocks have any contamination, which can be seen by observing the solid and dashed curves displayed on Figure \ref{fig:fnlbias} (see, also, Figure \ref{fig:clmocks}, for a comparison of the mean power spectrum). For clarity, the best-fitting estimates for the individual contaminated data are not shown in the figure.
+Fihgure \ref{fig:fnlbias} displays a comparison between the estimates of $\fnl$ before and after mitigation for the clean mocks. The best-fitting estimates \mr{from the mean of the mocks} are represented by the solid curves, and the individual spectra results are displayed as the scatter points. The results from fitting the mean power spectrum of the contaminated mocks are also shown via the dashed curves. We find nearly identical results for the biases caused by mitigation, whether or not the mocks have any contamination, which can be seen by observing the solid and dashed curves displayed on Figure \ref{fig:fnlbias} (see, also, Figure \ref{fig:clmocks}, for a comparison of the mean power spectrum). For clarity, the best-fitting estimates for the individual contaminated data are not shown in the figure.
 
 \begin{figure}
 \centering
@@ -111,7 +111,7 @@ Figure \ref{fig:fnlbias} displays a comparison between the estimates of $\fnl$ b
 \end{figure}
 
 
-\mr{As summarized in Table \ref{tab:contmocksmcmc}, we find significant shifts in the best-fitting estimates of $\fnl$ from the fits to the mean spectra. Specifically, we obtain $\Delta \fnl=-12$ for non-linear three maps, $-20$ for non-linear three maps, and $-27$ for non-linear nine maps when analyzing the $\fnl=0$ mocks. Whereas, bigger shifts are noticed for $\fnl=76.9$: we find $\Delta \fnl=-23$ for non-linear three maps, $-39$ for non-linear four maps, and $-72$ for non-linear nine maps.}
+\mr{As summarized in Table \ref{tab:contmocksmcmc}, we observe notable shifts in the best-fitting estimates of $\fnl$ resulting from fits to the mean power spectrum of the mocks. Specifically, for the $\fnl=0$ mocks, we obtain $\Delta \fnl=-12$ for non-linear three maps, $-20$ for non-linear four maps, and $-27$ for non-linear nine maps. Larger shifts are evident for $\fnl=76.9$: $\Delta \fnl=-23$ for non-linear three maps, $-39$ for non-linear four maps, and $-72$ for non-linear nine maps.}
 
 To calibrate our methods, we fit a linear curve to the $\fnl$ estimates from the mean power spectrum of the mocks, $f_{\rm NL, no~mitigation, clean} = m_{1} f_{\rm NL, mitigated} + m_{2}$. The $m_{1}$ and $m_{2}$ coefficients for non-linear three, four, and nine maps are summarized in Table \ref{tab:debiasparams}. These coefficients represent the impact of the cleaning methods on the likelihood. The uncertainty in $\fnl$ after mitigation increases by $m_{1}-1$. Figure \ref{fig:fnlbias} also shows that the choice of our cleaning method can have significant implications for the accuracy of the measured $\fnl$, and careful consideration should be given to the selection of the primary imaging systematic maps and the calibration of the cleaning algorithms in order to minimize systematic uncertainties.
 
