--- a/sections/results.tex
+++ b/sections/results.tex
@@ -24,7 +24,7 @@ We find that the excess clustering signal in the power spectrum of the DESI LRG 
 \raggedleft
 \includegraphics[width=0.45\textwidth]{figures/fnl_p.pdf}
 \includegraphics[width=0.437\textwidth]{figures/fnl_magbias.pdf}
-\caption{\mr{The best fitting estimates of $\fnl$ and associated $68\%$ ($95\%$) error from the DESI LRG targets with the non-linear nine maps approach while using different values of $p$ or $s$. The fiducial analysis, which fixes $p=1$ and $s=0.945$, is represented by the star.}}\label{fig:fnl_magbias}
+\caption{\mr{The best-fitting estimates of $\fnl$ and their corresponding $68\%$ ($95\%$) errors from the DESI LRG targets using the non-linear nine maps approach under various values of $p$ or $s$. The star symbol represents the fiducial analysis, where we fix $p=1$ and $s=0.945$.}}\label{fig:fnl_magbias}
 \end{figure}
 
 \begin{table*}
@@ -48,11 +48,10 @@ DESI & Nonlinear Nine Maps              & $    34$& $    24$& $   -10<\fnl<    5
 \end{table*}
 
 All $\fnl$ constraints presented here are calibrated for the effect of over-correction using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best-fitting and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after cleaning with the non-linear approach given various combinations for the imaging systematic maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ in the top panel, and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ in the bottom panel, from our sample before and after applying various corrections for imaging systematics. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. We obtain \mr{$33 (21) < \fnl < 61(76)$} at $68\%(95\%)$ confidence with \mr{$\chi^{2}=33.9$} for \textit{non-linear three maps} with $34$ degrees of freedom. Accounted for over-correction, we obtain \mr{$33(19) < \fnl < 62(78)$ with $\chi^{2}=34.4$ using \textit{non-linear four maps} which includes the additional stellar density map}. With or without stellar density, the confidence intervals are consistent with each other and significantly off from zero PNG; specifically, the probability that $\fnl$ is greater than zero, $P(\fnl >0)=99.9$ per cent. We also apply a more aggressive systematics treatment that includes regression using the non-linear approach against the full set of imaging maps we identified, non-linear nine maps, and find that \mr{zero $\fnl$ is recovered. Specifically,} our maximum
-likelihood value changes \mout{only slightly} to \mr{$\fnl \sim 34$ with $\chi^{2}=39.1$}, \mout{but} \mr{and} the uncertainty on $\fnl$ increases due
-to the aggressive treatment removing large-scale clustering information \mr{and diminishing the constraining power of the dataset, resulting in $-10(-39)<\fnl<58 (84)$}. \mr{We also explore the sensitivity of the $\fnl$ posterior for the non-linear nine maps method while varying the value of $p$ in the range of $0.5$ to $1.6$ and $s$ in the range of $0.75$ to $1.25$. Our findings are illustrated in Figure \ref{fig:fnl_magbias} and summarized in Table \ref{tab:dr9ps}. Regardless of the values for $p$ and $s$, $\fnl=0$ is recovered well within $95\%$ confidence.} For comparison, we obtain \mr{$102(86) < \fnl < 140(161)$} at $68\% (95\%)$ confidence with \mr{$\chi^{2}=45.1$} for the \textit{no weight} case.
+likelihood value changes \mout{only slightly} to \mr{$\fnl \sim 34$ with $\chi^{2}=39.1$}, \mout{but} \mr{and uncertainty on $\fnl$ expands, resulting in a range of $-10 (-39) < \fnl < 58 (84)$ at $68\% (95\%)$ confidence. This increase is attributed to the aggressive treatment, which removes large-scale clustering information and diminishes the constraining power of the dataset. Additionally, we explore the sensitivity of the $\fnl$ posterior using the non-linear nine maps method while varying the values of $p$ in the range of $0.5$ to $1.6$ and $s$ in the range of $0.75$ to $1.25$. Figure \ref{fig:fnl_magbias} illustrates our findings, and Table \ref{tab:dr9ps} provides a summary. Regardless of the values chosen for $p$ and $s$, we reliably recover $\fnl=0$ within the $95\%$ confidence interval.} For comparison, we obtain \mr{$102(86) < \fnl < 140(161)$} at $68\% (95\%)$ confidence with \mr{$\chi^{2}=45.1$} for the \textit{no weight} case.
 
 \begin{table*}
-    \caption{\mr{The calibrated best-fitting, marginalized mean, and marginalized $68\%$ ($95\%$) confidence estimates for $\fnl$ using the non-linear nine maps method and various values of $p$ and $s$. In each case, one hyper-parameter is fixed to its fiducial value (e.g., $p=1$ and $s=0.945$) while changing the other.}}
+    \caption{\mr{The calibrated best-fitting, marginalized mean, and marginalized $68\%$ ($95\%$) confidence estimates for $\fnl$ from the DESI LRG targets after non-linear nine maps and various values of $p$ and $s$.}}
     \label{tab:dr9ps}
    \centerline{%     
     \begin{tabular}{llllll}
@@ -60,7 +59,7 @@ to the aggressive treatment removing large-scale clustering information \mr{and 
     \hline
    &  & 	  & $\fnl$ &  &    \\
    \cmidrule(r{.7cm}){2-5}
-Hyperparameter & 	Best fit  & Mean & $ 68\%$ CL & $ 95\%$ CL & $\chi^{2}$ (dof=$34$) \\
+Parameter & 	Best fit  & Mean & $ 68\%$ CL & $ 95\%$ CL & $\chi^{2}$ (dof=$34$) \\
 \hline
 $p=$ 0.5                                     & $    44$& $    37$& $    14<\fnl<    60$& $    -6<\fnl<    77$ &   39.1\\
 0.6                                     & $    43$& $    35$& $    11<\fnl<    59$& $   -11<\fnl<    78$ &   39.1\\
@@ -90,16 +89,16 @@ $s=$ 0.75                                    & $    42$& $    31$& $    -1<\fnl<
 \end{table*}
 
 \subsubsection{Uncalibrated constraints: robustness tests}
-Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mr{While reporting the uncalibrated constraints, we therefore include the label `Mitigation Systematics' to emphasize that the $\fnl$ values will be subject to an unknown bias caused by over-correction}. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of \mr{$\fnl=-13$}}. Our non-linear three maps returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The differences observed in the best fitting estimates can be associated to over-correction, similar to the effect observed in the mocks (see Figure \ref{fig:contmcmc}). Therefore, the uncalibrated values should be considered with caution. Without accounting for over-correction, non-linear four maps and non-linear nine maps recover zero $\fnl$ respectively within $95\%$ and $68\%$ confidence. However, non-linear three maps is in tension with zero PNG at $99.5$ per cent.}
+Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mr{While reporting the uncalibrated constraints, we therefore include the label `Mitigation Systematics' to emphasize that the $\fnl$ values will be subject to an unknown bias caused by over-correction}. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of \mr{$\fnl=-13$}}. Our non-linear three maps returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The disparities in the best-fitting estimates can be linked to over-correction, mirroring the effects observed in the mocks (refer to Figure \ref{fig:contmcmc}). Consequently, caution is advised when considering the uncalibrated values. Without adjusting for over-correction, non-linear four maps and non-linear nine maps recover zero $\fnl$ within $95\%$ and $68\%$ confidence, respectively. However, the non-linear method with three maps exhibits tension with $\fnl=0$ at a confidence level of $99.5$ percent.}
 
 \begin{table*}
-    \caption{The uncalibrated best-fitting and marginalized mean estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for systematics. The estimates are not calibrated for over-correction, and thus are subject to mitigation systematics. The number of degrees of freedom is 34 (37 data points - 3 parameters). The lowest mode is $\ell=2$\mr{, $p=1$,} and the covariance matrix is from the $\fnl=0$ clean mocks (no mitigation) except for the case with '+ Cov' in which the covariance matrix is from the $\fnl=76.9$ clean mocks (no mitigation). \mr{We set $s=0.945$ for DESI, $0.943$ for DECaLS North (and South), and $0.951$ for BASS+MzLS.}}
+    \caption{The uncalibrated best-fitting and marginalized mean estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for systematics. The estimates are not calibrated for over-correction, and thus are subject to mitigation systematics. The number of degrees of freedom is 34 (37 data points - 3 parameters). The lowest mode is $\ell=2$\mr{, $p=1$,} and the covariance matrix is from the $\fnl=0$ clean mocks (no mitigation) except for the case with '+ Cov' in which the covariance matrix is from the $\fnl=76.9$ clean mocks (no mitigation). \mr{We fix $s=0.945$ for DESI, $0.943$ for DECaLS North (and South), and $0.951$ for BASS+MzLS.}}
     \label{tab:dr9method}
    \centerline{%     
-    \begin{tabular}{llllllll}
+    \begin{tabular}{llllllr}
     \hline
     \hline
-   &  & 	  & & $\fnl$ + Mitigation Systematics &  &  \\
+   &  & 	&   &  $\fnl$ + Mitigation Systematics &  &  \\
    \cmidrule(r{.7cm}){3-6}
 Footprint                               & Method & 	Best fit  & Mean & $ 68\%$ CL & $ 95\%$ CL & $\chi^{2}$ (dof=$34$) \\
     \hline
@@ -112,7 +111,7 @@ DESI & Nonlinear Four Maps              & $    14$& $    15$& $     5<\fnl<    2
 \bf{DESI} & \bf{Nonlinear Nine Maps}              & $   \bf{-13}$& $   \bf{-17}$& $   \bf{-31}<\fnl<    \bf{-3}$& $   \bf{-44}<\fnl<     \bf{9}$ &  \bf{39.1}\\
 DESI (imag. cut) & Nonlinear Nine Maps  & $   -25$& $   -22$& $   -37<\fnl<    -7$& $   -49<\fnl<     6$ &   37.7\\
 DESI (comp. cut) & Nonlinear Nine Maps  & $   -24$& $   -23$& $   -35<\fnl<   -10$& $   -46<\fnl<     2$ &   36.3\\
-DESI & Nonlinear Nine Maps+$f_{\rm NL}=76.92$ Cov& $   -11$& $   -15$& $   -30<\fnl<    0$& $   -43<\fnl<    12$ &   37.4\\
+DESI & Nonlinear Nine Maps+$f_{\rm NL}=76.9$ Cov& $   -11$& $   -15$& $   -30<\fnl<    0$& $   -43<\fnl<    12$ &   37.4\\
    \hline
 BASS+MzLS & Nonlinear Three Maps        & $    13$& $    16$& $    -6<\fnl<    38$& $   -28<\fnl<    64$ &   34.9\\
 BASS+MzLS & Nonlinear Four Maps         & $    10$& $    12$& $   -11<\fnl<    34$& $   -35<\fnl<    59$ &   34.1\\
