--- a/sections/data.tex
+++ b/sections/data.tex
@@ -122,7 +122,7 @@ The neural networks are trained for up to 70 training epochs with the gradient d
 \item \mout{\textbf{Five maps}: Extinction, depth in z, psfsize in r, neutral hydrogen density, and photometric calibration in z.}
 \item \textbf{Eight maps}: Extinction, depth in $grzW1$, psfsize in $grz$.
 \item \textbf{Nine maps}: Extinction, depth in $grzW1$, psfsize in $grz$, stellar density.
-\item \mr{\textbf{Nine++ maps}: same as Nine maps but with two additional maps; Extinction, depth in $grzW1$, psfsize in $grz$, stellar density, neutral hydrogen density, and photometric calibration in z.}
+\item \mr{\textbf{Eleven maps}: same as Nine maps but with two additional maps; Extinction, depth in $grzW1$, psfsize in $grz$, stellar density, neutral hydrogen density, and photometric calibration in z.}
 \end{enumerate}
 It is imperative to note that these sets are selected prior to examining the auto power spectrum of the LRG sample and unblinding the $\fnl$ constraints, and that the auto power spectrum and $\fnl$ measurements are unblinded only after our mitigation methods passed our rigorous tests for residual systematics.
 
