--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -13,10 +13,10 @@ The current tightest bound on $\fnl$ comes from Planck's bispectrum measurement 
 
 The Dark Energy Spectroscopic Instrument (DESI) is ideally suited to enable excellent constraints on primordial non-Gaussianity from the galaxy distribution. DESI uses $5000$ robotically-driven fibers to simultaneously collect spectra of extra-galactic objects \citep{2013arXiv1308.0847L, 2016arXiv161100037D, 2023AJ....165....9S}. DESI is designed to deliver an unparalleled volume of spectroscopic data covering $\sim 14,000$ square degrees that promises to deepen our understanding of the energy contents of the Universe, neutrino masses, and the nature of gravity \citep{2022AJ....164..207D}. Moreover, DESI alone is expected to improve our constraints on local PNG down to $\sigma(\fnl)=5$, assuming systematic uncertainties are under control \citep{aghamousa2016desi}. With multi-tracer techniques \citep{PhysRevLett.102.021302}, cosmic variance can be further reduced to allow surpassing CMB-like constraints \citep{2015ApJ...814..145A}. For instance, the distortion of CMB photons around foreground masses, which is referred to as CMB lensing, provides an additional probe of LSS, but from a different vantage point. We can significantly reduce statistical uncertainties below $\sigma(\fnl)\sim 1$ by cross-correlating LSS data with CMB-lensing, or other tracers of matter, such as 21 cm intensity mapping  \citep[see, e.g.,][]{schmittfull2018PhRvD, Heinrich2022AAS...24020203H, 2023arXiv230102406J, 2023arXiv230308901S}.  
  
-However, further work is needed to fully harness the potential of the scale-dependent bias effect in constraining $\fnl$ with LSS. The amplitude of the $\fnl$ signal in the galaxy distribution is proportional to the bias parameter $b_{\phi}$, such that $\Delta b \propto b_{\phi}\fnl k^{-2}$. Assuming the universality relation, $b_{\phi} \sim (b - p)$, where $b$ is the linear halo bias and $p=1$ is a parameter that describes the response of galaxy formation to primordial potential perturbations in the presence of local PNG \citep[see, e.g.,][]{slosar2008constraints}. The value of $p$ is not very well constrained for other tracers of matter \citep{2020JCAP...12..013B, 2020JCAP...12..031B}, and \cite{2022JCAP...11..013B} showed that marginalizing over $p$ even with wide priors leads to biased $\fnl$ constraints because of parameter space projection effects. More simulation-based studies are necessary to investigate the halo-assembly bias and the relationship between $b_{\phi}$ and $b$ for various galaxy samples. For instance, \cite{2023JCAP...01..023L} used N-body simulations to investigate secondary halo properties, such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of the halo occupation function while halo concentration significantly alters the halo function.  Without better-informed priors on $p$, it is argued that the scale-dependent bias effect can only be used to constrain the $b_{\phi}\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..031B}. \mout{Nevertheless, the detection significance of local PNG remains unaffected by various assumptions regarding $p$. This means that a nonzero detection of $b_{\phi}\fnl$ at a certain confidence level will still indicate a nonzero detection of $\fnl$ at that same confidence level}. In this work, we assume the relation that links $b_{\phi}$ to $b-p$ and, further, fix the value of $p$.  
+However, further work is needed to fully harness the potential of the scale-dependent bias effect in constraining $\fnl$ with LSS. The amplitude of the $\fnl$ signal in the galaxy distribution is proportional to the bias parameter $b_{\phi}$, such that $\Delta b \propto b_{\phi}\fnl k^{-2}$. Assuming the universality relation, $b_{\phi} \sim (b - p)$, where $b$ is the linear halo bias and $p=1$ is a parameter that describes the response of galaxy formation to primordial potential perturbations in the presence of local PNG \citep[see, e.g.,][]{slosar2008constraints}. The value of $p$ is not very well constrained for other tracers of matter \citep{2020JCAP...12..013B, 2020JCAP...12..031B}, and \cite{2022JCAP...11..013B} showed that marginalizing over $p$ even with wide priors leads to biased $\fnl$ constraints because of parameter space projection effects. More simulation-based studies are necessary to investigate the halo-assembly bias and the relationship between $b_{\phi}$ and $b$ for various galaxy samples. For instance, \cite{2023JCAP...01..023L} used N-body simulations to investigate secondary halo properties, such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of the halo occupation function while halo concentration significantly alters the halo function.  Without better-informed priors on $p$, it is argued that the scale-dependent bias effect can only be used to constrain the $b_{\phi}\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..031B}. \mr{However, regardless of the value of $p$, a nonzero detection of $b_{\phi}\fnl$ implies that local PNG is violated}\mout{Nevertheless, the detection significance of local PNG remains unaffected by various assumptions regarding $p$. This means that a nonzero detection of $b_{\phi}\fnl$ at a certain confidence level will still indicate a nonzero detection of $\fnl$ at that same confidence level}. In this work, we assume the relation that links $b_{\phi}$ to $b-p$ and, further, fix the value of $p$.  
 
 In addition to the theoretical uncertainties, measuring $\fnl$ through the scale-dependent bias effect is a difficult task due to various imaging systematic effects that can modulate the galaxy power spectrum on large scales. The imaging systematic effects often induce wide-angle variations in the density field, and in general, any large-scale variations can translate into an excess signal in the power spectrum \citep[see, e.g.,][]{huterer2013calibration}, that can be misinterpreted as the signature of non-zero local PNG \citep[see, e.g.,][]{PhysRevLett.106.241301}. Such spurious variations can be caused by Galactic foregrounds, such as dust extinction and stellar density, or varying imaging conditions, such as astrophysical seeing and survey depth \citep[see, e.g.,][]{ross2011}. The imaging systematic issues have made it challenging to accurately measure $\fnl$, as demonstrated in previous efforts to constrain it using the large-scale clustering of galaxies and quasars \citep[see, e.g.,][]{2013MNRAS.428.1116R,pullen2013systematic, Ho2015JCAP...05..040H}, and it is anticipated that they will be particularly problematic for wide-area galaxy surveys that observe regions of the night sky closer to the Galactic plane and that seek to incorporate more lenient selection criteria to accommodate fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}.
 
-The primary objective of this paper is to utilize the scale-dependent bias signature in the angular power spectrum of galaxies selected from DESI imaging data to constrain the value of $\fnl$. With an emphasis on a careful treatment of imaging systematic effects, we aim to lay the groundwork for subsequent studies of local PNG with DESI spectroscopy. To prepare our sample for measuring such a subtle signal, we employ linear multivariate regression and artificial neural networks to mitigate spurious density fluctuations and ameliorate the excess clustering power caused by imaging systematics. We thoroughly investigate potential sources of systematic error, including survey depth, astronomical seeing, photometric calibration, Galactic extinction, and local stellar density. Our methods and results are validated against simulations, with and without imaging systematics.
+The primary objective of this paper is to utilize the scale-dependent bias signature in the angular power spectrum of galaxies selected from DESI imaging data to constrain the value of $\fnl$. With an emphasis on a careful treatment of imaging systematic effects, we aim to lay the groundwork for subsequent studies of local PNG with DESI spectroscopy. To prepare our sample for measuring such a subtle signal, we employ \uw{linear multivariate regression and} artificial neural networks to mitigate spurious density fluctuations and ameliorate the excess clustering power caused by imaging systematics. We thoroughly investigate potential sources of systematic error, including survey depth, astronomical seeing, photometric calibration, Galactic extinction, and local stellar density. Our methods and results are validated against simulations, with and without imaging systematics.
 
 This paper is structured as follows. Section \ref{sec:data} describes the galaxy sample from DESI imaging and lognormal simulations with, or without, PNG and synthetic systematic effects. Section \ref{sec:method} outlines the theoretical framework for modelling the angular power spectrum, \mr{and} strategies for handling various observational and theoretical systematic effects\mout{, and statistical techniques for measuring the significance of remaining systematics in our sample after mitigation}. Our results are presented in Section \ref{sec:results}, and Section \ref{sec:conclusion} summarizes our conclusions and directions for future work.
