--- a/style.sty
+++ b/style.sty
@@ -25,6 +25,7 @@
 
 % ----- add your commands
 \newcommand{\mr}[1]{\textcolor{cyan}{#1}}
+\newcommand{\uw}[1]{\textcolor{magenta}{\uwave{#1}}}
 \newcommand{\mc}[1]{\textcolor{red}{\textbf{MR: \textit{#1}}}}
 \newcommand{\mout}[1]{\textcolor{red}{\sout{#1}}}
 \newcommand{\fnl}{f_{\rm NL}}
